--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Benjamim <benjamimq015@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "git-commit-msg-linter": "^3.1.0"
+    "@types/node": "^14.14.35",
+    "git-commit-msg-linter": "^3.1.0",
+    "typescript": "^4.2.3"
   }
 }
