--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^14.14.35",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "eslint": "^7.22.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-plugin-import": "^2.22.0",
     "git-commit-msg-linter": "^3.1.0",
     "typescript": "^4.2.3"
   }
