--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-import": "^2.22.0",
     "git-commit-msg-linter": "^3.1.0",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.4",
     "typescript": "^4.2.3"
   }
 }
