--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Benjamim <benjamimq015@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^26.0.21",
     "@types/node": "^14.14.35",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "eslint": "^7.22.0",
@@ -12,7 +13,12 @@
     "eslint-plugin-import": "^2.22.0",
     "git-commit-msg-linter": "^3.1.0",
     "husky": "^4.3.8",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
+    "ts-jest": "^26.5.4",
     "typescript": "^4.2.3"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
