--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "author": "Benjamim <benjamimq015@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "test": "jest",
+    "test:staged": "jest"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.21",
     "@types/node": "^14.14.35",
@@ -17,8 +21,5 @@
     "lint-staged": "^10.5.4",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.3"
-  },
-  "scripts": {
-    "test": "jest"
   }
 }
