--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,8 @@
     "class-methods-use-this": "off",
     "@typescript-eslint/no-unused-vars": ["warn", {
       "argsIgnorePattern": "_"
-    }]
+    }],
+    "no-restricted-syntax": "off",
+    "no-await-in-loop": "off"
   }
 }
