--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Benjamim <benjamimq015@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "start:dev": "tsnd --respawn --transpile-only --ignore-watch node_modules src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "yarn test --watch -c jest.unit.config.js",
@@ -15,8 +16,10 @@
     "typeorm:dev": "NODE_ENV=test ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/jest": "^26.0.21",
     "@types/node": "^14.14.35",
+    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "eslint": "^7.22.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
@@ -25,11 +28,13 @@
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
+    "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.31"
