--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Benjamim <benjamimq015@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "start:docker": "yarn tsc -p tsconfig.build.json && NODE_ENV=prod docker-compose up -d",
     "start:dev": "tsnd --respawn --transpile-only --ignore-watch node_modules src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
@@ -34,6 +35,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
