--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: tnm_tests
+        ports:
+          - 5432:5432
+    
     steps:
       - uses: actions/checkout@v2
 
