--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Benjamim <benjamimq015@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "NODE_ENV=prod docker-compose up -d",
+    "start": "NODE_ENV=prod node dist/main/server.js",
     "build": "tsc -p tsconfig.build.json",
     "start:docker": "yarn tsc -p tsconfig.build.json && NODE_ENV=prod docker-compose up -d",
     "start:dev": "tsnd --respawn --transpile-only --ignore-watch node_modules src/main/server.ts",
