--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/jest": "^26.0.21",
     "@types/node": "^14.14.35",
     "@types/supertest": "^2.0.10",
+    "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "eslint": "^7.22.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
@@ -41,6 +42,7 @@
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.1.6",
     "typeorm": "^0.2.31"
   }
 }
